--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </defs>
               </svg>
           </div>
-          <input type="text" name="username" />
+          <input type="text" name="username" placeholder="username or e-mail" />
         </div>
         <div class="form-password">
           <div class="icon">
@@ -52,7 +52,7 @@
               </defs>
               </svg>
           </div>
-          <input type="password" name="password" />
+          <input type="password" name="password" placeholder="password"/>
         </div>
         <div class="form-footer">
           <div>
